--- a/code/hypothesis.ipynb
+++ b/code/hypothesis.ipynb
@@ -34,21 +34,21 @@
    },
    "cell_type": "code",
    "source": [
-    "rows = 30           # Number of rows in the plane\n",
-    "seats_per_row = 3   # Seats per row (standard economy configuration)\n",
-    "exits = [0, 15, 29] # Locations of exits (front, middle, back exits)\n",
-    "speed_factor = 0.8  # First three rows move faster (80% of the normal time)\n",
-    "door_opening_time = 2  # Time for middle exit door to open (2 seconds)\n",
-    "num_simulations = 1000\n",
-    "proportion_old = 0.3  # 30% old passengers\n",
-    "old_in_first_3_rows_prob = 0.7  # 70% chance for old passengers to sit in the first 3 rows\n",
-    "emergency_level = 0.5  # Emergency level: 0.0 (low) to 1.0 (high)\n",
-    "occupancy_rate = 0.8  # 80% of seats are occupied\n",
+    "rows = 30\n",
+    "seats_per_row_head = 4   # Seats per row in first class/business class\n",
+    "seats_per_row = 6   # Seats per row in economy\n",
+    "exits = [0, 9, 10, 27]\n",
+    "speed_factor = 0.8\n",
+    "proportion_old = 0.3\n",
+    "old_in_first_3_rows_prob = 0.7\n",
+    "emergency_level = 0.5\n",
+    "occupancy_rate = 0.8\n",
     "\n",
-    "plane = Plane(rows, seats_per_row, exits, speed_factor, door_opening_time, proportion_old,\n",
-    "              old_in_first_3_rows_prob, emergency_level, occupancy_rate)\n",
+    "plane = Plane(rows, seats_per_row, exits, speed_factor, proportion_old,\n",
+    "              old_in_first_3_rows_prob, emergency_level, occupancy_rate,\n",
+    "              seats_per_row_head)\n",
     "plane.simulate_evacuation()\n",
-    "plane.draw_seatmap('both')\n"
+    "plane.draw_seatmap('both')"
    ],
    "id": "ffe024844b94d46e",
    "outputs": [
